# KDD-Cup-AutoML-5

./: .gitmodules  LICENSE  README.md
optable_submission/: model.py
optable_submission/optable_package/: setup.py
optable_submission/optable_package/deb/: gcc-8-base_8.3.0-7_amd64.deb  libboost-math1.62-dev_1.62.0+dfsg-10+b1_amd64.deb  libboost-math1.62.0_1.62.0+dfsg-10+b1_amd64.deb  libeigen3-dev_3.3.7-1_all.deb  libstdc++6_8.3.0-7_amd64.deb  pkg-config_0.29-4+b1_amd64.deb
optable_submission/optable_package/optable/: CONSTANT.py  __init__.py
optable_submission/optable_package/optable/dataset/: dataset.py  dataset_maker_for_automl.py  feature_types.py  relation.py  relation_types.py  table.py  union_find_node.py
optable_submission/optable_package/optable/learning/: adversarial_auc_selector.py  learner.py  lightgbm_cv_as_well_as_possible.py  optuna_hyper_params_searcher.py  time_split_hyper_params_searcher.py  time_split_lightgbm_cv.py
optable_submission/optable_package/optable/manipulations/: __init__.py
optable_submission/optable_package/optable/scheduling/: timer.py
optable_submission/optable_package/src/: CMakeLists.txt  aggregate_set.cpp  aggregate_set.h  aggregator.cpp  aggregator.h  categorical_manager.cpp  categorical_manager.h  factorized_manager.cpp  factorized_manager.h  factorized_target_encoder.cpp  factorized_target_encoder.h  label_encoder_for_multi_fit.cpp  label_encoder_for_multi_fit.h  main.cpp  multi_categorical_manager.cpp  multi_categorical_manager.h  sequential_regression.cpp  sequential_regression.h  target_encoder.cpp  target_encoder.h
(+37 files in other folders)
